--- a/css/shop.css
+++ b/css/shop.css
@@ -1,12 +1,6 @@
-
 body{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
-
-
-
-
 .search-button-flex-container {
     display: flex;
     justify-content: center;
@@ -42,67 +36,84 @@ body{
     padding: 0 20px;
     box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2), 0 3px 5px 0 rgba(0,0,0,0.19);
 }
-.products-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.DataGridProducts{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
-    justify-items: center;
-    align-items: center;
-    max-width: 1200px;
-    padding: 0 20px;
-}
-.card{
-    display: grid;
-    grid-template-areas:
-    "image image"
-    "title price"
-    "stars button";
-    gap: 10px;
-    border: 0px black solid;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-.card img {
-    grid-area: image;
-    width: 100%;
-    height: auto;
-}
-.card #title {
-    grid-area: title;
-    margin: 5px;
-    text-align: left;
-}
-.card #price {
-    grid-area: price;
-    margin: 5px ;
-    text-align: right;
-} 
-.card div {
-    grid-area: stars;
-    text-align: left;
-    margin: 5px;
-}
-.card Button {
-    grid-area: button;
-    background: none;
-    border: none;
-    cursor: pointer;
-    text-align: right;
-    margin: 5px;
-}
-.DataGridProducts{
-    grid-template-columns: repeat(3, 1fr); 
-}
 
-@media screen and (max-width: 576px){
-    .DataGridProducts{
-        grid-template-columns: 1fr; 
+
+
+.grid-container {
+      
+    margin: auto;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        gap: 100px;
+        padding: 25px;
+      }
+  
+      .card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        background-color: #f2f2f2;
+        border-radius: 8px;
+        overflow: hidden;
+      }
+  
+      .image-container {
+        width: 100%;
+        padding-top: 100%; /* To maintain aspect ratio of the image */
+        position: relative;
+      }
+  
+      .image-container img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+  
+      .text-container {
+        width: 100%;
+        padding: 10px;
+        display: flex;
+        justify-content: space-between;
+        box-sizing: border-box;
+        align-items: flex-start;
+      }
+  
+      .text-container h4 {
+        margin: 0;
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+      }
+  
+      .text-container h4 span:first-child {
+        text-align: left;
+        flex: 1;
+      }
+  
+      .text-container h4 span:last-child {
+        text-align: right;
+        flex: 1;
+      }
+      .stars-container {
+      font-size: 0; /* Remove the space created by inline elements */
     }
-    .search-button-flex-container {
-        flex-wrap: wrap;
+  
+    .stars-container span {
+      font-size: 1rem; /* Reset the font size for the stars */
     }
-}
+  
+  
+    @media screen and (max-width: 576px){
+      .grid-container {
+          grid-template-columns: 1fr; 
+      }
+      .search-button-flex-container {
+          flex-wrap: wrap;
+      }
+  }
