--- a/css/heroPage.css
+++ b/css/heroPage.css
@@ -86,6 +86,12 @@ body {
 .img4 { grid-area: img4; }
 .img5 { grid-area: img5; }
 .img6 { grid-area: img6; }
+.background-color{
+    background-color: #000000;
+    background-image: linear-gradient(225deg, #000000 0%, #341b4b 50%, #082497 100%);
+    margin-top: 30px;
+    padding: 1px;
+}
 .title-container{
     text-align: center;
     margin: 35px auto;
@@ -138,31 +144,9 @@ body {
     transform: rotateY(180deg);
     padding: 3px;
 }
-.background-color{
-    background-color: #000000;
-    background-image: linear-gradient(225deg, #000000 0%, #341b4b 50%, #082497 100%);
-    margin-top: 20px;
-    padding: 1px;
-}
-@media (max-width: 1200px) {
+@media (max-width: 768px) { /*mobile devices*/
     .gallery {
-        width: 80%;
-        grid-template-areas:
-            "img1 img2 img3"
-            "img4 img2 img3"
-            "img4 img5 img6";
-        grid-gap: 15px;
-    }
-    .img1 {
-          width: 100%;
-        }
-    .brand-container{
-        margin: 100px;
-    }
-}
-@media (max-width: 490px) {
-    .gallery {
-        width: 90%;
+        width: 70%;
         grid-template-areas:
             "img1 img2"
             "img3 img4"
@@ -177,7 +161,7 @@ body {
         font-size: 30px;
     }
     .brand-container{
-        margin: 0px;
+        margin: 20px;
     }
     .background-color{
         padding-bottom: 60px;
