--- a/css/heroPage.css
+++ b/css/heroPage.css
@@ -48,9 +48,11 @@ body {
     align-items: center;
     flex-direction: column;
     margin-top: 20px;
+    margin-bottom: 55px;
+    flex-wrap: wrap;
 }
 .gallery-container h1{
-    font-size: 35px;
+    font-size: 40px;
     margin: 15px;
 }
 .gallery {
@@ -58,16 +60,16 @@ body {
     margin: 25px;
     display: grid;
     grid-template-areas:
-        "img1 img2 img2 img3"
-        "img4 img2 img2 img3"
-        "img4 img5 img6 img6";
+        "img1 img1 img2 img3"
+        "img1 img1 img4 img5"
+        "img6 img7 img8 img8";
     grid-gap: 25px;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 50%;
 }
 .gallery div {
-    width: 100%;
+    max-width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -86,6 +88,8 @@ body {
 .img4 { grid-area: img4; }
 .img5 { grid-area: img5; }
 .img6 { grid-area: img6; }
+.img7 { grid-area: img7; }
+.img8 { grid-area: img8; }
 .background-color{
     background-color: #000000;
     background-image: linear-gradient(225deg, #000000 0%, #341b4b 50%, #082497 100%);
@@ -95,7 +99,7 @@ body {
 .title-container{
     text-align: center;
     margin: 35px auto;
-    font-size: 18px;
+    font-size: 21px;
     color: white;
 }
 .brand-container{
@@ -146,11 +150,12 @@ body {
 }
 @media (max-width: 768px) { /*mobile devices*/
     .gallery {
-        width: 70%;
+        width: 60%;
         grid-template-areas:
             "img1 img2"
             "img3 img4"
-            "img5 img6";
+            "img5 img6"
+            "img7 img8";
         grid-gap: 10px;
     }
     .hero-text button{
