--- a/css/cart.css
+++ b/css/cart.css
@@ -1,6 +1,18 @@
-
-body{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+#bt_master_card {
+  background-size: cover; 
+  background-image: url('/images/MasterCard.png');
+  background-position: center;  
+  background-color: #e0e0e0;
+  color: #000;
+  padding: 10px 20px;
+  border: none;
+  width: 50px;
+  height: 25px;  
+  cursor: pointer;
+}
+#bt_master_card:hover {
+  background-color: #a0a0a0;
+  color: #fff;
 }
 
 .container {
