--- a/css/contact.css
+++ b/css/contact.css
@@ -1,148 +1,169 @@
-/* General styles */
-body {
-  margin: 0;
-  padding: 0;
+
+.carousel{
+  max-width: 90%;
+  margin: 0 auto;
+  }
+.centerText
+{
+  text-align: center;
+}
+.grey_back{
+  background-color: lightgrey;
+  width: 100%;
+  height: 50px;
+  color: white;
+}
+.pictures{
+  border-radius: 50%;
+  width: 150px;
 }
 
-h1 {
-  color: white; 
-  font-family: 'Wallpoet', cursive;
-}
-
-/* Form styles */
-.contact-container {
+.suport
+{
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 50px;
-}
-
-.contact-message {
-  text-align: center;
-  font-size: 24px;
-  margin-bottom: 30px;
-}
-
-.form-wrapper {
-  display: flex;
   justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin-bottom: 20px;
+  height: 40vh;
+  width: 80%;
+  margin: auto;
+  
 }
 
-.form-container {
-  margin: 10px;
+.form_map {
+  display: grid;
+  grid-gap: 10px;
+  width: 90%;
+  height: 500px;
+  padding: auto;
+  margin: auto;
+  grid-template-columns: 1fr 1fr;    
 }
 
+.contacts{
+  display: grid;
+  grid-gap: 10px;
+  width: 90%;
+  height: 500px;
+  padding: auto;
+  margin: auto;
+  grid-template-columns: 1fr 1fr;  
+}
+
+.form-container,
 .map-container {
-  margin-top: 20px;
-  margin-bottom: 0;
-  height: 450px; /* Defina a altura aqui */
-}
-
-.map {
-  width: 100%;
   height: 100%;
-  border: 1px solid black;
 }
 
-.form-submit {
-  margin-top: 20px;
-  text-align: center;
-}
-
-.box {
-  background-color: #000;
+form {
+  max-width: 500px;
   padding: 20px;
-  margin-bottom: 20px;
-  width: 100%;
+  background-color: rgb(239, 238, 238);
+  border-radius: 5px;
 }
 
 .form-input {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 15px;
-}
-
-.form-input label {
-  color: #ffffff;
-  text-align: center;
+  margin-bottom: 26px;
 }
 
 .form-input input,
 .form-input textarea {
-  background-color: #000;
-  border: 2px solid #808080;
-  color: #ffffff;
+  width: 100%;
+  
   padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+.form-submit {
+  text-align: center;
+}
+
+.form-submit button {
+  padding: 10px 20px;
+  background-color: #808580;
+  color: white;
+  border: none;
+  border-radius: 3px;
+}
+
+.map {
+  position: relative;
+  width: 100%;
   height: 100%;
 }
 
-/* Testimonial styles */
-.testimonial-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  margin-top: 20px;
+.map iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
 
-.testimonial {
-  text-align: center;
-  margin: 20px;
-}
-
-.testimonial img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
+@media only screen and (max-width: 600px){
+  .form_map {
+    grid-template-columns: 1fr;    
+    
+  margin-bottom: 400px;    
+  }
+  .map{
+    height: 500px;
+  }
+  .form-input {
   margin-bottom: 10px;
-}
-
-.testimonial h3 {
-  color: black;
-}
-
-.testimonial p {
-  color: black;
-}
-
-
-
-/* Footer styles */
-.footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: black;
-  padding: 10px;
-}
-
-.footer_icons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer_icons i {
-  margin-left: 10px;
-  color: white;
-  text-decoration: none;
-}
-
-@media screen and (max-width: 600px) {
-  .footer {
-    justify-content: center;
   }
-
-  .footer_logo {
-    display: block;
-    text-align: center;
+  .contacts {
+    height: ;
+    grid-template-columns: 1fr;   
   }
+}
 
-  .footer_icons {
-    margin-top: 10px;
-  }
+  /* * {box-sizing: border-box;} */
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+max-width: 100%;
+width: 100%;
+position: relative;
+margin: auto;
+cursor: pointer; /* Add cursor pointer */
+}
+
+/* Caption text */
+.text {
+color: #252424;
+font-size: 15px;
+padding: 8px 12px;
+position: absolute;
+bottom: 8px;
+width: 100%;
+text-align: center;
+}
+
+
+/* The dots/bullets/indicators */
+.dot {
+height: 15px;
+width: 15px;
+margin: 0 2px;
+background-color: #bbb;
+border-radius: 50%;
+display: inline-block;
+transition: background-color 0.6s ease;
+}
+
+.active {
+background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+animation-name: fade;
+animation-duration: 1.5s;
+}
+
+@keyframes fade {
+from {opacity: .4} 
+to {opacity: 1}
 }
