--- a/css/index.css
+++ b/css/index.css
@@ -40,27 +40,28 @@
     align-items: center;
     flex-direction: column;
     margin-top: 20px;
+    margin-bottom: 55px;
+    flex-wrap: wrap;
 }
 .gallery-container h1{
-    font-size: 35px;
+    font-size: 40px;
     margin: 15px;
 }
 .gallery {
-    width: 95%;
-    padding: auto;
-    margin: 25px 25px 25px 25px;
+    width: 90%;
+    margin: 25px;
     display: grid;
     grid-template-areas:
-        "img1 img2 img2 img3"
-        "img4 img2 img2 img3"
-        "img4 img5 img6 img6";
+        "img1 img1 img2 img3"
+        "img1 img1 img4 img5"
+        "img6 img7 img8 img8";
     grid-gap: 25px;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 50%;
 }
 .gallery div {
-    width: 100%;
+    max-width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -79,17 +80,24 @@
 .img4 { grid-area: img4; }
 .img5 { grid-area: img5; }
 .img6 { grid-area: img6; }
+.img7 { grid-area: img7; }
+.img8 { grid-area: img8; }
+.background-color{
+    background-color: #000000;
+    background-image: linear-gradient(225deg, #000000 0%, #341b4b 50%, #082497 100%);
+    margin-top: 30px;
+    padding: 1px;
+}
 .title-container{
     text-align: center;
     margin: 35px auto;
-    font-size: 18px;
+    font-size: 21px;
     color: white;
 }
 .brand-container{
     display: flex;
     flex-direction: row;
-    padding: 5px;
-    margin: 50px;
+    margin: 100px;
     gap: 100px;
     justify-content: center;
     flex-wrap: wrap;
@@ -132,29 +140,7 @@
     transform: rotateY(180deg);
     padding: 3px;
 }
-.background-color{
-    background-color: #000000;
-    background-image: linear-gradient(225deg, #000000 0%, #341b4b 50%, #082497 100%);
-    margin-top: 80px;
-    padding: 1px;
-}
-@media (max-width: 1200px) {
-    .gallery {
-        width: 80%;
-        grid-template-areas:
-            "img1 img1 img2 img3"
-            "img1 img1 img4 img5"
-            "img6 img5 img6 img6";
-        grid-gap: 15px;
-    }
-    .img1 {
-          width: 100%;
-        }
-    .brand-container{
-        margin: 100px;
-    }
-}
-@media (max-width: 490px) {
+@media (max-width: 768px) { /*mobile devices*/
     .gallery {
         width: 90%;
         grid-template-areas:
@@ -163,7 +149,9 @@
             "img3" 
             "img4"
             "img5"
-            "img6";
+            "img6"
+            "img7"
+            "img8";
         grid-gap: 10px;
     }
     .hero-text button{
@@ -174,7 +162,7 @@
         font-size: 30px;
     }
     .brand-container{
-        margin: 0px;
+        margin: 20px;
     }
     .background-color{
         padding-bottom: 60px;
