--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,3 @@
-
-
 .arrowButton
 {
   width: 150px;
@@ -14,10 +12,11 @@
   color: #333333;
 }
 
-.carousel{
-  max-width: 90%;
-  margin: 0 auto;
-  }
+.slideImage
+{
+  width: 100%;
+}
+
 .centerText
 {
   text-align: center;
@@ -25,24 +24,29 @@
 .grey_back{
   background-color: lightgrey;
   width: 100%;
-  height: 50px;
+  height: 30px;
   color: white;
+  margin: 10px;
 }
 .pictures{
   border-radius: 50%;
-  width: 150px;
+  width: 180px;
+  margin: 5%;
 }
 
-.suport
+.support
 {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 40vh;
-  width: 80%;
+  width: 100%;
   margin: auto;
+  padding: 20px;
+  border-radius: 5%; 
   
+  background-color: rgba(249, 245, 245, 0.988);
 }
 
 .form_map {
@@ -114,6 +118,33 @@ form {
   border: 0;
 }
 
+
+
+
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+
+.slideshow-container {
+max-width: 100%;
+width: 100%;
+position: relative;
+margin: auto;
+cursor: pointer; 
+}
+
+
+.text {
+color: black;
+font-size: 25px;
+padding: 12px;
+position: absolute;
+bottom: 8px;
+width: 100%;
+text-align: center;
+}
+
+
 @media only screen and (max-width: 600px){
   .form_map {
     grid-template-columns: 1fr;    
@@ -127,58 +158,6 @@ form {
   margin-bottom: 10px;
   }
   .contacts {
-    height: ;
     grid-template-columns: 1fr;   
   }
-}
-
-  /* * {box-sizing: border-box;} */
-.mySlides {display: none;}
-img {vertical-align: middle;}
-
-/* Slideshow container */
-.slideshow-container {
-max-width: 100%;
-width: 100%;
-position: relative;
-margin: auto;
-cursor: pointer; /* Add cursor pointer */
-}
-
-/* Caption text */
-.text {
-color: black;
-font-size: 25px;
-padding: 12px;
-position: absolute;
-bottom: 8px;
-width: 100%;
-text-align: center;
-}
-
-
-/* The dots/bullets/indicators */
-.dot {
-height: 15px;
-width: 15px;
-margin: 0 2px;
-background-color: #bbb;
-border-radius: 50%;
-display: inline-block;
-transition: background-color 0.6s ease;
-}
-
-.active {
-background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-animation-name: fade;
-animation-duration: 1.5s;
-}
-
-@keyframes fade {
-from {opacity: .4} 
-to {opacity: 1}
 }
