--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,10 @@
     padding: 0px;
     box-sizing: border-box;
 }
+main
+{    
+    max-width: 1200px;
+    min-width: 500px;
+    margin: auto;
+    padding: 10px;
+}
