--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,3 @@
-
 .heading-about{
     width: 98%;
     display: flex;
@@ -72,9 +71,8 @@
 }
 .list-image{
     flex: 1;
-    margin-left: 40px;
     overflow: hidden;
-    padding-left: 120px;
+    padding-left: 50px;
 }
 .list-image img{
     max-width: 100%;
@@ -107,51 +105,6 @@
     text-align: justify;
     margin-left: 20px;
     margin-bottom: 11px;
-}
-@media screen and (max-width: 850px) {
-    .heading-about {
-        padding: 0px 20px;
-    }
-    .heading-about h1 {
-        font-size: 36px;
-    }
-    .heading-about p {
-        font-size: 17px;
-        margin-bottom: 0px;
-    }
-    .container-about {
-        padding: 0px;
-    }
-    .about {
-        padding: 20px;
-        flex-direction: column;
-    }
-    .about-image, .list-image{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 20px;
-        margin-right: 0px;
-    }
-    .list-image{
-        margin-left: 0px;
-    }
-    .about-content p{
-        padding: 0px;
-        font-size: 16px;
-    }
-    .commitment{
-        padding: 20px;
-        flex-direction: column-reverse;
-    }
-    .list-commitment p{
-        padding: 0px;
-        font-size: 16px;
-    }
-    .list-commitment li{
-        padding: 0px;
-        font-size: 21px;
-    }
 }
 .accordion{
     margin: 60px -20px;
@@ -197,4 +150,68 @@
 }
 .accordion input[type="radio"]:checked+label::before{
     content: "-";
+}
+@media screen and (max-width: 850px) {
+    main{
+        display: contents;
+    }
+    .container-about{
+        margin-bottom: 20px;
+        margin-top: 15px;
+    }
+    .heading-about {
+        padding: 0px 20px;
+    }
+    .heading-about h1 {
+        font-size: 36px;
+    }
+    .heading-about p {
+        font-size: 17px;
+        margin-bottom: 0px;
+    }
+    .container-about {
+        padding: 0px;
+    }
+    .about {
+        padding: 20px;
+        flex-direction: column;
+    }
+    .about-image, .list-image{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 20px;
+        margin-right: 0px;
+        padding-left: 0px;
+    }
+    .list-image{
+        margin-left: 0px;
+    }
+    .about-content p{
+        padding: 0px;
+        font-size: 16px;
+    }
+    .commitment{
+        padding: 20px;
+        flex-direction: column-reverse;
+    }
+    .list-commitment p{
+        padding: 0px;
+        font-size: 16px;
+    }
+    .list-commitment li{
+        padding: 0px;
+        font-size: 21px;
+    }
+    .accordion{
+        margin: 0px 0px;
+        padding: 10px;
+    }
+    .accordion li{
+        width: 90%;
+    }
+    .container-about h1{
+        padding-top: 10px;
+        padding-left: 20px;
+    }
 }
