--- a/css/index.css
+++ b/css/index.css
@@ -167,4 +167,7 @@
     .background-color{
         padding-bottom: 60px;
     }
+    .flip-card:hover .flip-card-inner {
+        transform: none;
+      }
 }
