--- a/css/shop.css
+++ b/css/shop.css
@@ -1,132 +1,127 @@
-
 .search-button-flex-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
 }
-.search-container input{
-    flex-grow: 1;
-    width: 30vw;
-    border: 0;
-    height: 32px;
-    font-size: 17px;
-    margin-left: 10px;
-    border-bottom: 1px solid black;
+.search-container input {
+  flex-grow: 1;
+  width: 30vw;
+  border: 0;
+  height: 32px;
+  font-size: 17px;
+  margin-left: 10px;
+  border-bottom: 1px solid black;
 }
-.button-checkout-container{
-     margin-left: 10px;
-     margin-right: 10px;
+.button-checkout-container {
+  margin-left: 10px;
+  margin-right: 10px;
 }
-.goCheckout{
-    border: none;
-    font-size: 17px;
-    width: auto;
-    margin-left: 10px; 
-    display: inline-block;
-    outline: 0;
-    border: none;
-    cursor: pointer;
-    border-radius: 4px;
-    height: 32px;
-    background-color: #0000000d;
-    color: #0e0e10;
-    padding: 0 20px;
-    box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2), 0 3px 5px 0 rgba(0,0,0,0.19);
+.goCheckout {
+  border: none;
+  font-size: 17px;
+  width: auto;
+  margin-left: 10px;
+  display: inline-block;
+  outline: 0;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+  height: 32px;
+  background-color: #0000000d;
+  color: #0e0e10;
+  padding: 0 20px;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 3px 5px 0 rgba(0, 0, 0, 0.19);
 }
-
-
 
 .grid-container {
-      
-    margin: auto;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        gap: 100px;
-        padding: 25px;
-      }
-  
-      .card {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        border-radius: 8px;
-        overflow: hidden;
-      }
-  
-      .image-container {
-        width: 100%;
-        padding-top: 100%; /* To maintain aspect ratio of the image */
-        position: relative;
-      }
-  
-      .image-container img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-      }
-  
-      .text-container {
-        width: 100%;
-        padding: 10px;
-        display: flex;
-        justify-content: space-between;
-        box-sizing: border-box;
-        align-items: flex-start;
-      }
-  
-      .text-container h4 {
-        margin: 0;
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-      }
-  
-      .text-container h4 span:first-child {
-        text-align: left;
-        flex: 1;
-      }
-  
-      .text-container h4 span:last-child {
-        text-align: right;
-        flex: 1;
-      }
-      .stars-container {
-      font-size: 0; 
-      }
-      /* hover */
-        .starsContainer :hover{
-        cursor: pointer;  
-        opacity: 0.5;
-        }
-        .fa.fa-cart-plus.fa-lg:hover{
-        cursor: pointer;               
-        opacity: 0.5;
-        }
-        .image-container:hover{
-          opacity: 0.8;
-        cursor: pointer;  
-        
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 100px;
+  padding: 25px;
+}
 
-        }
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 8px;
+  overflow: hidden;
+}
 
-  
-      .stars-container span {
-        font-size: 1rem; 
-      }
-    
-  
-    @media screen and (max-width: 600px){
-      .grid-container {
-          grid-template-columns: 1fr; 
-      }
-      .search-button-flex-container {
-          flex-wrap: wrap;
-      }
+.image-container {
+  width: 100%;
+  padding-top: 100%; /* To maintain aspect ratio of the image */
+  position: relative;
+}
+
+.image-container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.text-container {
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box;
+  align-items: flex-start;
+}
+
+.text-container h4 {
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.text-container h4 span:first-child {
+  text-align: left;
+  flex: 1;
+}
+
+.text-container h4 span:last-child {
+  text-align: right;
+  flex: 1;
+}
+.stars-container {
+  font-size: 0;
+}
+/* hover */
+.starsContainer :hover {
+  cursor: pointer;
+  opacity: 0.5;
+}
+.fa.fa-cart-plus.fa-lg:hover {
+  cursor: pointer;
+  opacity: 0.5;
+}
+.image-container:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.stars-container span {
+  font-size: 1rem;
+}
+
+@media screen and (max-width: 600px) {
+  .grid-container {
+    grid-template-columns: 1fr;
   }
+  .search-button-flex-container {
+    flex-wrap: wrap;
+  }
+  .button-checkout-container {
+    margin-top: 10px;
+  }
+}
