--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@
     background-size: contain;
     position: relative;
     background-color: black;
+    width: 100%;
     margin-bottom: 15px;
 }
 .hero-text{
