--- a/css/navbar.css
+++ b/css/navbar.css
@@ -4,7 +4,11 @@
   align-items: center;
   background-color: #f2f2f2;
   padding: 1px;
-  font-size: 18px;  
+  font-size: 20px;  
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 9999;
 }
 
 .links{
